--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,9 @@ __marimo__/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+
+.idea
+go.sum
+obj
+bin
