--- a/level-4/sensor_hub_backend/Dockerfile
+++ b/level-4/sensor_hub_backend/Dockerfile
@@ -6,15 +6,15 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o /app ./main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -o /api ./main.go
 
 # Stage 2: Runtime
 FROM alpine:3.20
 
 WORKDIR /root/
 
-COPY --from=builder /app .
+COPY --from=builder /api .
 
 EXPOSE 8080
 
-CMD ["./app"]
+CMD ["./api"]
